--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                         </li>
                         <li class="futures-class">
                             <svg class="futures-icons" width="64" height="64">
-                                <use href="./imagicons.svg#icon-diagram"></use>
+                                <use href="./images/icons.svg#icon-diagram"></use>
                             </svg>
                             <h3  class="futures-list">Diligence</h3>
                             <p class="futures-txt">
@@ -152,7 +152,7 @@
                                     <li class="team-person-icons">
                                         <a class="team-icons-link" href="">
                                             <svg class="person-icons" width="16" height="16">
-                                                <use href=/icons.svg#icon-instagram"></use>
+                                                <use href="./images/icons.svg#icon-instagram"></use>
                                             </svg>
                                         </a>
                                     </li>
