--- a/index.html
+++ b/index.html
@@ -61,9 +61,11 @@
                     <h2 class="visually-hidden">list of futures</h2>
                     <ul class="futures-basic">
                         <li class="futures-class">
-                            <svg class="futures-icons" width="64" height="64">
-                                <use href="./images/icons.svg#icon-antenna"></use>
-                            </svg>
+                            <div class="futures-icons-wrap">
+                                <svg class="futures-icons" width="64" height="64">
+                                    <use href="./images/icons.svg#icon-antenna"></use>
+                                </svg>
+                            </div>
                             <h3  class="futures-list">Strategy</h3>
                             <p class="futures-txt">
                                 Our goal is to identify the business
@@ -71,27 +73,33 @@
                             </p>
                         </li>
                         <li class="futures-class">
-                            <svg class="futures-icons" width="64" height="64">
-                                <use href="./images/icons.svg#icon-clock"></use>
-                            </svg>
+                            <div class="futures-icons-wrap">
+                                <svg class="futures-icons" width="64" height="64">
+                                    <use href="./images/icons.svg#icon-clock"></use>
+                                </svg>
+                            </div>
                             <h3  class="futures-list">Punctuality</h3>
                             <p class="futures-txt">
                                 Bring the key message to the brand's audience for the best price within the shortest possible time.
                             </p>
                         </li>
                         <li class="futures-class">
-                            <svg class="futures-icons" width="64" height="64">
-                                <use href="./imagicons.svg#icon-diagram"></use>
-                            </svg>
+                            <div class="futures-icons-wrap">
+                                <svg class="futures-icons" width="64" height="64">
+                                    <use href="./imagicons.svg#icon-diagram"></use>
+                                </svg>
+                            </div>
                             <h3  class="futures-list">Diligence</h3>
                             <p class="futures-txt">
                                 Research and confirm brands that present the strongest digital growth opportunities and minimize risk.
                             </p>
                         </li>
                         <li class="futures-class">
-                            <svg class="futures-icons" width="64" height="64">
-                                <use href="./images/icons.svg#icon-astronaut"></use>
-                            </svg>
+                            <div class="futures-icons-wrap">
+                                <svg class="futures-icons" width="64" height="64">
+                                    <use href="./images/icons.svg#icon-astronaut"></use>
+                                </svg>
+                            </div>
                             <h3  class="futures-list">Technologies</h3>
                             <p class="futures-txt">
                                 Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.
@@ -273,7 +281,7 @@
                         <li class="portfolio-item">
                             <div class="portfolio-item-wrap">
                                 <img class="portfolio-img" src="./images/bank.jpg" alt="card with banking app" width="360" height="300">
-                                <p class="port-cover-text"></p>
+                                <p class="port-cover-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                             </div>
                             <div class="port-list-wrap">
                                 <h3 class="port-list">Banking App</h3>
