--- a/index.html
+++ b/index.html
@@ -346,44 +346,48 @@
 <!-- *================= FOOTER ======================== -->
 
     <footer class="foot">
-                <div class="container foot-icons-media">
-                    <a class="logo-web-foot">web<span class="logo-foot">Studio</span></a>
-                    <p class="foot-info">
-                            Increase the flow of customers and sales for your business with digital marketing & growth solutions.
-                    </p>
-                
-                    <h2 class="foot-icons-title">Social media</h2>
-                    <ul class="foot-icons">
-                        <li class="foot-href-icons">
-                            <a class="href-icons-link" href="">
-                                <svg class="href-icons" width="16" height="16">
-                                    <use href="./images/icons.svg#icon-instagram"></use>
-                                </svg>
-                            </a>
-                        </li>
-                        <li class="foot-href-icons">
-                            <a class="href-icons-link" href="">
-                                <svg class="href-icons" width="16" height="16">
-                                    <use href="./images/icons.svg#icon-twitter"></use>
-                                </svg>
-                            </a>
-                        </li>
-                        <li class="foot-href-icons">
-                            <a class="href-icons-link" href="">
-                                <svg class="href-icons" width="16" height="16">
-                                    <use href="./images/icons.svg#icon-facebook"></use>
-                                </svg>
-                            </a>
-                        </li>
-                        <li class="foot-href-icons">
-                            <a class="href-icons-link" href="">
-                                <svg class="href-icons" width="16" height="16">
-                                    <use href="./images/icons.svg#icon-linkedin"></use>
-                                </svg>
-                            </a>
-                        </li>
-                    </ul>
+                <div class="container foot-wrap">
+                    <div class="logo-foot-wrap">
+                        <a class="logo-web-foot">web<span class="logo-foot">Studio</span></a>
+                        <p class="foot-info">
+                                Increase the flow of customers and sales for your business with digital marketing & growth solutions.
+                        </p>
+                    </div>
+                    <div class="foot-icons-media">
+                        <h2 class="foot-icons-title">Social media</h2>
+                        <ul class="foot-icons">
+                            <li class="foot-href-icons">
+                                <a class="href-icons-link" href="">
+                                    <svg class="href-icons" width="16" height="16">
+                                        <use href="./images/icons.svg#icon-instagram"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                            <li class="foot-href-icons">
+                                <a class="href-icons-link" href="">
+                                    <svg class="href-icons" width="16" height="16">
+                                        <use href="./images/icons.svg#icon-twitter"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                            <li class="foot-href-icons">
+                                <a class="href-icons-link" href="">
+                                    <svg class="href-icons" width="16" height="16">
+                                        <use href="./images/icons.svg#icon-facebook"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                            <li class="foot-href-icons">
+                                <a class="href-icons-link" href="">
+                                    <svg class="href-icons" width="16" height="16">
+                                        <use href="./images/icons.svg#icon-linkedin"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
+                
     </footer>
 
 </body>
